<resources>
    <string name="app_name">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="already_register">Already Registered Then Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Rest Password</string>
    <string name="btn_link_to_register">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
</resources>
