<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/container"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/animation_list"
android:fitsSystemWindows="true"
tools:context=".LoginActivity">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

        <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ContentDescription"/>


        <com.omanamazon.chat.widgets.TextV
                android:id="@+id/logo"
                android:textColor="@color/teal_900"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="قسم الصيدله والمخازن الطبيه"
                android:textStyle="bold"
                android:textSize="20dp"
                tools:ignore="HardcodedText"/>

        <android.support.v4.widget.Space android:layout_width="@dimen/logo_w_h"
                                         android:layout_height="@dimen/logo_w_h"/>

        <com.omanamazon.chat.widgets.TextINput
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.omanamazon.chat.widgets.EditLogin
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>
        </com.omanamazon.chat.widgets.TextINput>

        <com.omanamazon.chat.widgets.TextINput
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.omanamazon.chat.widgets.EditLogin
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
        </com.omanamazon.chat.widgets.TextINput>

        <!-- Login Button -->

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <com.omanamazon.chat.widgets.LogButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/teal_700"
                android:text="@string/btn_login"
                android:textColor="@android:color/black" />

        <com.omanamazon.chat.widgets.LogButton
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/teal_700" />

        <!-- Link to Login Screen -->

        <com.omanamazon.chat.widgets.LogButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

</RelativeLayout>